--- a/public/assets/css/app/style.css
+++ b/public/assets/css/app/style.css
@@ -50009,3 +50009,46 @@ select:disabled {
     font-style: italic; /* Aplica cursiva */
     font-family: "Arial", sans-serif; /* Cambia el tipo de letra a Arial */
 }
+
+/* Contenedor del input */
+.custom-input-container {
+    margin-bottom: 20px;
+    /* Espaciado entre los campos */
+}
+
+/* Estilo para el label */
+.custom-input-label {
+    width: 95%;
+    font-size: 16px;
+    /* Tamaño del texto del label */
+    color: black;
+    /* Color del texto del label */
+    /*font-weight: ;*/
+    text-align: left;
+    /* Estilo de texto en negritas */
+    margin-bottom: 5px;
+    /* Espacio entre el label y el input */
+    display: block;
+    /* Asegura que el label esté arriba del input */
+}
+
+/* Estilo para el input */
+.custom-input-field {
+    width: 95%;
+    /* El input ocupará el 100% del contenedor */
+    padding: 10px;
+    /* Espaciado interno del input */
+    border: 1px solid #ccc;
+    /* Borde gris claro */
+    border-radius: 2px;
+    /* Bordes redondeados */
+    font-size: 14px;
+    /* Tamaño de fuente para el texto del input */
+}
+
+.custom-input-field:focus {
+    border-color: rgb(121, 122, 122);
+    /* Cambia el color del borde al hacer focus */
+    outline: none;
+    /* Elimina el contorno predeterminado del navegador */
+}
